# srws

./: Cargo.toml  LICENSE  README.md  install.sh  srws.service
src/: main.rs
