[package]
name = "srws"
version = "0.1.2"
authors = ["depsterr <depsterr@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/depsterr/srws"
description = "srws (Simple rust web server) is a simple HTTP only web server."
repository = "https://github.com/depsterr/srws"
readme = "README.md"
keywords = ["webserver", "web", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
